fix gaps

--- a/src/components/top-feature/top-feature.scss
+++ b/src/components/top-feature/top-feature.scss
@@ -1,6 +1,8 @@
 .top-feature {
   display: flex;
   flex-flow: row nowrap;
+  max-width: 280px;
+  margin-top: 2px;
   padding-bottom: 20px;
   border-bottom: 1px solid $dark-shade-5;
 }
