--- a/src/pages/room-details/index.scss
+++ b/src/pages/room-details/index.scss
@@ -37,13 +37,13 @@
 .room-details__body__desc__left {
   display: flex;
   flex-flow: column wrap;
-  gap: 15px;
+  gap: 10px;
 }
 
 .room-details__body__desc-row {
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-between;
+  gap: 7px;
 }
 
 .room-impressions {
@@ -51,7 +51,7 @@
   gap: 30px;
   align-items: flex-end;
   padding-top: 5px;
-  padding-left: 5px;
+  padding-left: 3px;
 }
 
 .statictic-ring {
@@ -154,9 +154,9 @@
 .room-details__body__comment-section {
   display: flex;
   flex-flow: column nowrap;
-  gap: 20px;
-  margin-bottom: 30px;
-  padding-top: 7px;
+  gap: 21px;
+  margin-bottom: 25px;
+  padding-top: 5px;
 }
 
 @media (max-width: $large-screen) {
@@ -197,7 +197,7 @@
 
   .room-details__body__desc-row {
     flex-flow: column nowrap;
-    gap: 10px;
+    gap: 15px;
     align-items: center;
 
     .bullet-list {
